--- a/packages/js/plugins/ens/package.json
+++ b/packages/js/plugins/ens/package.json
@@ -14,6 +14,8 @@
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
+    "prebuild": "yarn codegen",
+    "codegen": "npx w3 plugin codegen",
     "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@ethersproject/address": "5.0.7",
+    "@web3api/cli": "0.0.1-prealpha.30",
     "@web3api/core-js": "0.0.1-prealpha.30",
     "ethers": "5.0.7"
   },
