--- a/packages/apis/ens/package.json
+++ b/packages/apis/ens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ens-web3api",
+  "name": "@polywrap/ens-wrapper",
   "description": "ENS Web3API",
   "private": true,
   "version": "0.0.1-prealpha.30",
@@ -20,7 +20,6 @@
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.30",
     "@web3api/test-env-js": "0.0.1-prealpha.30",
     "@web3api/wasm-as": "0.0.1-prealpha.30",
-    "assemblyscript": "0.19.10",
     "ethers": "5.0.8",
     "jest": "27.0.6",
     "js-yaml": "3.14.0",
