query http plugin via client

--- a/packages/js/plugins/graph-node/package.json
+++ b/packages/js/plugins/graph-node/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@web3api/client-js": "0.0.1-prealpha.30",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
