revert plugin upgrades

--- a/package.json
+++ b/package.json
@@ -15,13 +15,7 @@
   "scripts": {
     "reset": "yarn clean && yarn && yarn build",
     "clean": "npx rimraf ./**/node_modules ./**/build ./**/coverage ./**/.w3",
-    "build": "yarn build:p1 && yarn build:p2 && yarn build:p3 && yarn build:p4 && yarn build:p5 && yarn build:p6",
-    "build:p1": "lerna run build --no-private --ignore @web3api/cli* --ignore @web3api/*plugin* --ignore @web3api/react",
-    "build:p2": "lerna run deps:fix --scope @web3api/cli && yarn",
-    "build:p3": "lerna run build --scope @web3api/cli",
-    "build:p4": "lerna run build --scope @web3api/*plugin*",
-    "build:p5": "lerna run deps:revert --scope @web3api/cli && yarn",
-    "build:p6": "lerna run build --scope @web3api/cli* --scope @web3api/react",
+    "build": "lerna run build --no-private --ignore @web3api/cli* --ignore @web3api/react && lerna run build --scope @web3api/client-js --scope @web3api/react && lerna run build --scope @web3api/cli",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- --fix",
     "lint:ci": "lerna run lint",
