--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -26,10 +26,11 @@
     "graphql-tag": "2.10.4",
     "js-yaml": "3.14.0",
     "jsonschema": "1.4.0",
-    "semver": "7.3.4"
+    "semver": "7.3.5"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/semver": "7.3.8",
     "@web3api/os-js": "0.0.1-prealpha.31",
     "jest": "26.6.3",
     "json-schema-to-typescript": "10.1.3",
