--- a/packages/js/plugins/uts46/package.json
+++ b/packages/js/plugins/uts46/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
-    "codegen": "npx -p @web3api/cli plugin codegen",
+    "codegen": "npx -p @web3api/cli w3 plugin codegen",
     "lint": "eslint --color --ext .ts --ignore-pattern **/*.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
