--- a/packages/apis/ens/web3api.meta.yaml
+++ b/packages/apis/ens/web3api.meta.yaml
@@ -3,7 +3,55 @@ subtext: Wrapper for ENS domains
 description: Protocol that allows you to attach your address to a human readable string
 icon: ./meta/imgs/logo.png
 queries:
+  - name: Deploy FIFS Registrar
+    query: ./meta/queries/deployFIFSRegistrar.graphql
+    recipe: ./meta/recipes/deployFIFSRegistrar.json
+  - name: Get address
+    query: ./meta/queries/getAddress.graphql
+    recipe: ./meta/recipes/getAddress.json
+  - name: Get address from domain
+    query: ./meta/queries/getAddressFromDomain.graphql
+    recipe: ./meta/recipes/getAddressFromDomain.json
+  - name: Get content hash
+    query: ./meta/queries/getContentHash.graphql
+    recipe: ./meta/recipes/getContentHash.json
+  - name: Get expiry times
+    query: ./meta/queries/getExpiryTimes.graphql
+    recipe: ./meta/recipes/getExpiryTimes.json
+  - name: Get owner
+    query: ./meta/queries/getOwner.graphql
+    recipe: ./meta/recipes/getOwner.json
+  - name: Get resolver
+    query: ./meta/queries/getResolver.graphql
+    recipe: ./meta/recipes/getResolver.json
+  - name: Register domain
+    query: ./meta/queries/register.graphql
+    recipe: ./meta/recipes/register.json
+  - name: Set reverse register
+    query: ./meta/queries/reverseRegistrer.graphql
+    recipe: ./meta/recipes/reverseRegistrer.json
+  - name: Set address
+    query: ./meta/queries/setAddress.graphql
+    recipe: ./meta/recipes/setAddress.json
+  - name: Set content hash
+    query: ./meta/queries/setContentHash.graphql
+    recipe: ./meta/recipes/setContentHash.json
+  - name: Set owner
+    query: ./meta/queries/setOwner.graphql
+    recipe: ./meta/recipes/setOwner.json
+  - name: Set record
+    query: ./meta/queries/setRecord.graphql
+    recipe: ./meta/recipes/setRecord.json
+  - name: Set subdomain owner
+    query: ./meta/queries/setSubdomainOwner.graphql
+    recipe: ./meta/recipes/setSubdomainOwner.json
+  - name: Set subdomain record
+    query: ./meta/queries/setSubdomainRecord.graphql
+    recipe: ./meta/recipes/setSubdomainRecord.json
+
   - name: Set Resolver
     query: ./meta/queries/setResolver.graphql
+  - name: Get Resolver
+    query: ./meta/queries/getResolver.graphql
   - name: Get Resolver
     query: ./meta/queries/getResolver.graphql
