--- a/packages/apis/ens/web3api.build.yaml
+++ b/packages/apis/ens/web3api.build.yaml
@@ -1,4 +1,4 @@
-format: 0.0.1-prealpha.1
+format: 0.0.1-prealpha.2
 config:
   node_version: "14.16.0"
   include:
@@ -8,3 +8,7 @@ config:
     - src/common
     - src/contracts
     - src/utils.ts
+linked_packages:
+  - name: "@web3api/wasm-as"
+    path: ../../wasm/as
+    filter: /\.(test|spec)\.(js|ts)$/gm
