--- a/packages/apis/ens/web3api.yaml
+++ b/packages/apis/ens/web3api.yaml
@@ -1,6 +1,7 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.5
 language: wasm/assemblyscript
 build: ./web3api.build.yaml
+meta: ./web3api.meta.yaml
 modules:
   mutation:
     schema: ./src/mutation/schema.graphql
@@ -8,8 +9,3 @@ modules:
   query:
     schema: ./src/query/schema.graphql
     module: ./src/query/index.ts
-import_redirects:
-  - uri: w3://ens/sha3.web3api.eth
-    schema: ../../../node_modules/@web3api/sha3-plugin-js/schema.graphql
-  - uri: w3://ens/uts46.web3api.eth
-    schema: ../../../node_modules/@web3api/uts46-plugin-js/schema.graphql
