--- a/packages/apis/ens/package.json
+++ b/packages/apis/ens/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@polywrap/ens-wrapper",
+  "name": "@web3api/ens-api",
   "description": "ENS Web3API",
   "private": true,
-  "version": "0.0.1-prealpha.35",
+  "version": "0.0.1-prealpha.40",
   "scripts": {
     "build": "npx w3 build",
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down",
     "deploy": "yarn deploy:contract && yarn deploy:web3api",
     "deploy:web3api": "npx w3 build --ipfs http://localhost:5001 --test-ens ens.eth",
-    "deploy:contract": "node ./deploy-contracts.js",
+    "deploy:contract": "node ./scripts/deploy-contracts.js",
     "test": "yarn test:e2e && yarn test:recipe",
     "test:e2e": "jest --passWithNoTests --runInBand --verbose",
     "test:recipe": "npx w3 query ./recipes/e2e.json"
