--- a/packages/apis/ens/web3api.meta.yaml
+++ b/packages/apis/ens/web3api.meta.yaml
@@ -6,55 +6,55 @@ icon: ./meta/imgs/logo.png
 queries:
   - name: Configure open domain
     query: ./meta/queries/configureOpenDomain.graphql
-    vars: ./meta/recipes/configureOpenDomain.json
+    vars: ./meta/queries/configureOpenDomain.json
   - name: Create subdomain in open domain
     query: ./meta/queries/createSubdomainInOpenDomain.graphql
-    vars: ./meta/recipes/createSubdomainInOpenDomain.json
+    vars: ./meta/queries/createSubdomainInOpenDomain.json
   - name: Create subdomain in open domain and set content hash
     query: ./meta/queries/createSubdomainInOpenDomainAndSetContentHash.graphql
-    vars: ./meta/recipes/createSubdomainInOpenDomainAndSetContentHash.json
+    vars: ./meta/queries/createSubdomainInOpenDomainAndSetContentHash.json
   - name: Deploy FIFS Registrar
     query: ./meta/queries/deployFIFSRegistrar.graphql
-    vars: ./meta/recipes/deployFIFSRegistrar.json
+    vars: ./meta/queries/deployFIFSRegistrar.json
   - name: Get address
     query: ./meta/queries/getAddress.graphql
-    vars: ./meta/recipes/getAddress.json
+    vars: ./meta/queries/getAddress.json
   - name: Get address from domain
     query: ./meta/queries/getAddressFromDomain.graphql
-    vars: ./meta/recipes/getAddressFromDomain.json
+    vars: ./meta/queries/getAddressFromDomain.json
   - name: Get content hash
     query: ./meta/queries/getContentHash.graphql
-    vars: ./meta/recipes/getContentHash.json
+    vars: ./meta/queries/getContentHash.json
   - name: Get expiry times
     query: ./meta/queries/getExpiryTimes.graphql
-    vars: ./meta/recipes/getExpiryTimes.json
+    vars: ./meta/queries/getExpiryTimes.json
   - name: Get owner
     query: ./meta/queries/getOwner.graphql
-    vars: ./meta/recipes/getOwner.json
+    vars: ./meta/queries/getOwner.json
   - name: Get resolver
     query: ./meta/queries/getResolver.graphql
-    vars: ./meta/recipes/getResolver.json
+    vars: ./meta/queries/getResolver.json
   - name: Register domain
-    query: ./meta/queries/register.graphql
-    vars: ./meta/recipes/register.json
+    query: ./meta/queries/registerDomain.graphql
+    vars: ./meta/queries/registerDomain.json
   - name: Set reverse register
     query: ./meta/queries/reverseRegister.graphql
-    vars: ./meta/recipes/reverseRegister.json
+    vars: ./meta/queries/reverseRegister.json
   - name: Set address
     query: ./meta/queries/setAddress.graphql
-    vars: ./meta/recipes/setAddress.json
+    vars: ./meta/queries/setAddress.json
   - name: Set content hash
     query: ./meta/queries/setContentHash.graphql
-    vars: ./meta/recipes/setContentHash.json
+    vars: ./meta/queries/setContentHash.json
   - name: Set owner
     query: ./meta/queries/setOwner.graphql
-    vars: ./meta/recipes/setOwner.json
+    vars: ./meta/queries/setOwner.json
   - name: Set record
     query: ./meta/queries/setRecord.graphql
-    vars: ./meta/recipes/setRecord.json
+    vars: ./meta/queries/setRecord.json
   - name: Set subdomain owner
     query: ./meta/queries/setSubdomainOwner.graphql
-    vars: ./meta/recipes/setSubdomainOwner.json
+    vars: ./meta/queries/setSubdomainOwner.json
   - name: Set subdomain record
     query: ./meta/queries/setSubdomainRecord.graphql
-    vars: ./meta/recipes/setSubdomainRecord.json
+    vars: ./meta/queries/setSubdomainRecord.json
