--- a/packages/js/plugins/filesystem/package.json
+++ b/packages/js/plugins/filesystem/package.json
@@ -21,9 +21,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@ethersproject/address": "5.0.7",
-    "@web3api/core-js": "0.0.1-prealpha.44",
-    "ethers": "5.0.7"
+    "@web3api/core-js": "0.0.1-prealpha.44"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
