--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@web3api/client-js": "0.0.1-prealpha.45",
+    "@web3api/ens-plugin-js": "0.0.1-prealpha.45",
+    "@web3api/ipfs-plugin-js": "0.0.1-prealpha.45",
+    "@web3api/test-env-js": "0.0.1-prealpha.45",
     "jest": "26.6.3",
     "nock": "13.0.7",
     "rimraf": "3.0.2",
