--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -25,6 +25,7 @@
     "@web3api/core-js": "0.0.1-prealpha.46",
     "@web3api/ens-plugin-js": "0.0.1-prealpha.46",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.46",
+    "@web3api/graph-node-plugin-js": "0.0.1-prealpha.46",
     "@web3api/http-plugin-js": "0.0.1-prealpha.46",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.46",
     "@web3api/logger-plugin-js": "0.0.1-prealpha.46",
