--- a/packages/js/plugins/filesystem/package.json
+++ b/packages/js/plugins/filesystem/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/filesystem-plugin-js",
+  "name": "@web3api/fs-plugin-js",
   "description": "Web3API File System Javascript Plugin",
   "version": "0.0.1-prealpha.44",
   "license": "MIT",
@@ -24,12 +24,18 @@
     "@web3api/core-js": "0.0.1-prealpha.44"
   },
   "devDependencies": {
-    "@types/jest": "26.0.8",
-    "jest": "26.6.3",
+    "@web3api/client-js": "0.0.1-prealpha.44",
+    "@web3api/test-env-js":  "0.0.1-prealpha.44",
+    "@web3api/test-cases": "0.0.1-prealpha.44",
+    "@web3api/ipfs-plugin-js": "0.0.1-prealpha.44",
+    "@web3api/ens-plugin-js": "0.0.1-prealpha.44",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.44",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
     "ts-node": "8.10.2",
-    "typescript": "4.0.7"
+    "typescript": "4.0.7",
+    "@types/jest": "26.0.8",
+    "jest": "26.6.3"
   },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
