--- a/packages/apis/near/package.json
+++ b/packages/apis/near/package.json
@@ -2,24 +2,18 @@
   "name": "@web3api/near-api",
   "description": "Re-implements near-api-js as a secure, fast, composable Polywrapper",
   "private": true,
-  "version": "0.0.1-prealpha.47",
+  "version": "0.0.1-prealpha.48",
   "scripts": {
-    "build": "yarn build:contract && yarn build:web3api",
-    "build:web3api": "npx w3 build",
-    "build:contract": "node ./scripts/build-contract.js",
+    "build": "npx w3 build",
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down",
-    "deploy": "yarn deploy:contract && yarn deploy:web3api",
-    "deploy:web3api": "npx w3 build --ipfs http://localhost:5001 --test-ens simplestorage.eth",
-    "deploy:contract": "node ./scripts/deploy-contract.js",
+    "deploy": "npx w3 build --ipfs http://localhost:5001 --test-ens near-api.eth",
     "test": "npx w3 query ./recipes/e2e.json"
   },
   "devDependencies": {
-    "@web3api/cli": "0.0.1-prealpha.47",
-    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.47",
-    "@web3api/wasm-as": "0.0.1-prealpha.47",
+    "@web3api/cli": "0.0.1-prealpha.48",
+    "@web3api/wasm-as": "0.0.1-prealpha.48",
     "assemblyscript": "0.19.1",
-    "ethers": "5.0.7",
     "solc": "0.8.3"
   }
 }
