--- a/packages/apis/near/web3api.yaml
+++ b/packages/apis/near/web3api.yaml
@@ -8,3 +8,6 @@ modules:
   query:
     schema: ./src/query/schema.graphql
     module: ./src/query/index.ts
+import_redirects:
+  - uri: w3://ens/nearPlugin.web3api.eth
+    schema: ../../js/plugins/near/schema.graphql
