--- a/packages/js/plugins/near/package.json
+++ b/packages/js/plugins/near/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1-prealpha.48",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.json",
-    "prebuild": "npx w3 plugin codegen",
+    "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.json",
+    "codegen": "npx -p @web3api/cli w3 plugin codegen",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
-    "@web3api/cli": "0.0.1-prealpha.48",
     "@web3api/client-js": "0.0.1-prealpha.48",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
