--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "reset": "yarn clean && yarn && yarn build",
     "clean": "npx rimraf ./**/node_modules ./**/build ./**/coverage ./**/.w3",
+    "install:dependencies": "cd dependencies && yarn",
+    "preinstall": "yarn install:dependencies",
     "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:cli",
     "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react",
     "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1",
@@ -30,7 +32,7 @@
     "publish:npm": "lerna publish from-package --no-private --yes --registry https://registry.npmjs.org/ --no-verify-access"
   },
   "devDependencies": {
-    "lerna": "3.22.1",
+    "lerna": "4.0.0",
     "rimraf": "3.0.2",
     "@typescript-eslint/eslint-plugin": "4.11.1",
     "@typescript-eslint/parser": "4.11.1",
