--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
-    "codegen": "npx -p @web3api/cli w3 plugin codegen",
+    "codegen": "node ../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
     "lint": "eslint --color --ext .ts src/",
     "lint:fix": "eslint --color --fix --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
