--- a/packages/apis/near/package.json
+++ b/packages/apis/near/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1-prealpha.48",
   "scripts": {
     "build": "npx w3 build",
-    "codegen": "npx w3 codegen",
+    "codegen": "node ../../cli/bin/w3 codegen",
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down",
     "deploy": "npx w3 build --ipfs http://localhost:5001 --test-ens near-api.eth",
