--- a/packages/js/plugins/near/package.json
+++ b/packages/js/plugins/near/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1-prealpha.48",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.json",
-    "codegen": "npx -p @web3api/cli w3 plugin codegen",
+    "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
+    "codegen": "node ../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
