--- a/packages/apis/near/package.json
+++ b/packages/apis/near/package.json
@@ -6,15 +6,30 @@
   "scripts": {
     "build": "npx w3 build",
     "codegen": "node ../../cli/bin/w3 codegen",
-    "test:env:up": "npx w3 test-env up",
-    "test:env:down": "npx w3 test-env down",
     "deploy": "npx w3 build --ipfs http://localhost:5001 --test-ens near-api.eth",
-    "test": "npx w3 query ./recipes/e2e.json"
+    "test:e2e": "jest --passWithNoTests --runInBand --verbose",
+    "test:unit": "asp --verbose",
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:ci": "yarn test:unit && yarn test:e2e"
+  },
+  "dependencies": {
+    "as-base58": "^0.1.1"
   },
   "devDependencies": {
+    "@types/jest": "22.2.3",
+    "@web3api/client-js": "0.0.1-prealpha.48",
     "@web3api/cli": "0.0.1-prealpha.48",
     "@web3api/wasm-as": "0.0.1-prealpha.48",
+    "@web3api/test-env-js": "0.0.1-prealpha.48",
+    "@web3api/ethereum-plugin-js": "0.0.1-prealpha.48",
+    "@web3api/ipfs-plugin-js": "0.0.1-prealpha.48",
+    "@web3api/ens-plugin-js": "0.0.1-prealpha.48",
+    "@web3api/near-plugin-js": "0.0.1-prealpha.48",
     "assemblyscript": "0.19.1",
-    "solc": "0.8.3"
+    "solc": "0.8.3",
+    "jest": "27.0.6",
+    "ts-jest": "27.0.4",
+    "ts-node": "8.10.2",
+    "typescript": "4.0.7"
   }
 }
