--- a/packages/apis/near/web3api.build.yaml
+++ b/packages/apis/near/web3api.build.yaml
@@ -5,4 +5,6 @@ config:
   node_version: "14.16.0"
   include:
     - ./package.json
-    - ./src
+    - ./src/mutation
+    - ./src/query
+    - ./src/utils
