--- a/packages/apis/near/package.json
+++ b/packages/apis/near/package.json
@@ -29,6 +29,7 @@
     "jest": "27.0.6",
     "ts-jest": "27.0.4",
     "ts-node": "8.10.2",
-    "typescript": "4.0.7"
+    "typescript": "4.0.7",
+    "near-hello": "0.5.1"
   }
 }
