--- a/packages/apis/near/package.json
+++ b/packages/apis/near/package.json
@@ -7,10 +7,9 @@
     "build": "npx w3 build",
     "codegen": "node ../../cli/bin/w3 codegen",
     "deploy": "npx w3 build --ipfs http://localhost:5001 --test-ens near-api.eth",
-    "test:e2e": "jest --passWithNoTests --runInBand --verbose",
-    "test:unit": "asp --verbose",
-    "test": "yarn test:unit && yarn test:e2e",
-    "test:ci": "yarn test:unit && yarn test:e2e"
+    "test:e2e": "jest --passWithNoTests --runInBand --verbose src/__tests__/e2eQueries.spec.ts",
+    "test": "yarn test:e2e",
+    "test:ci": "yarn test:e2e"
   },
   "dependencies": {
     "as-base58": "^0.1.1"
@@ -30,6 +29,8 @@
     "ts-jest": "27.0.4",
     "ts-node": "8.10.2",
     "typescript": "4.0.7",
-    "near-hello": "0.5.1"
+    "near-hello": "0.5.1",
+    "near-api-js": "0.43.1",
+    "bn.js": "5.2.0"
   }
 }
