--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "preinstall": "yarn install:dependencies",
     "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:cli",
     "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react",
-    "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1 --ignore @web3api/near-plugin-js",
+    "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @web3api/client-js --scope @web3api/react",
     "build:cli": "lerna run build --scope @web3api/cli",
     "lint": "lerna run lint --ignore @web3api/uts46-plugin-js",
