--- a/packages/js/asyncify/package.json
+++ b/packages/js/asyncify/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
-    "lint": "eslint --color --ext .ts --ignore-pattern src/__tests__/cases/* src/",
+    "lint": "eslint --color -c ../../../.eslintrc.js --ignore-pattern src/__tests__/cases/* src/",
     "test": "jest --passWithNoTests --runInBand --verbose=true",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
