--- a/packages/manifest-schemas/package.json
+++ b/packages/manifest-schemas/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/web3-api/monorepo.git"
   },
   "main": "./package.json",
+  "scripts": {
+    "lint": "eslint --color -c ../../.eslintrc.js ."
+  },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
     "access": "public"
