--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -36,16 +36,16 @@
     "@web3api/uts46-plugin-js": "0.0.1-prealpha.54",
     "graphql": "15.5.0",
     "js-yaml": "3.14.0",
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@types/js-yaml": "3.11.1",
+    "@types/uuid": "8.3.0",
     "@web3api/cli": "0.0.1-prealpha.54",
     "@web3api/os-js": "0.0.1-prealpha.54",
     "@web3api/test-cases": "0.0.1-prealpha.54",
     "@web3api/test-env-js": "0.0.1-prealpha.54",
-    "@types/uuid": "^8.3.0",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
