--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -28,6 +28,12 @@ jobs:
         with:
           node-version: '${{env.NVMRC}}'
 
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+
       - name: Set Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -82,19 +88,40 @@ jobs:
           npm config set //registry.npmjs.org/:_authToken=${{secrets.WEB3_API_BUILD_BOT_NPM_PAT}}
           echo $(npm whoami --registry https://registry.npmjs.org/)
 
-      - name: Install dependencies
+      - name: Auth into Crates.io
+        if: ${{env.TAG_EXISTS}} == 'false'
+        run: cargo login ${{secrets.WEB3_API_BUILD_BOT_CRATES_PAT}}
+
+      - name: Install JS dependencies
         if: ${{env.TAG_EXISTS}} == 'false'
         run: yarn install --nonInteractive --frozen-lockfile
 
-      - name: Build packages
+      - name: Build JS packages
         if: ${{env.TAG_EXISTS}} == 'false'
         run: yarn build
+
+      - name: Build RS crates
+        uses: actions-rs/cargo@v1
+        working-directory: ./packages/wasm/rs
+        with:
+          command: build
+
+      - name: Verify & Generate RS Documentation
+        uses: actions-rs/cargo@v1
+        with:
+          command: doc
+          args: --workspace --no-deps
 
       - name: Publish Node Packages To NPM
         if: ${{env.TAG_EXISTS}} == 'false'
         run: yarn publish:npm
         env:
           NPM_AUTH_TOKEN: ${{secrets.WEB3_API_BUILD_BOT_NPM_PAT}}
+
+      - name: Upload Rust Creates To Crates.io
+        uses: actions-rs/cargo@v1
+        with:
+          command: publish
 
       - uses: actions/github-script@0.8.0
         if: ${{env.TAG_EXISTS}} == 'false'
