--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -101,16 +101,12 @@ jobs:
         run: yarn build
 
       - name: Build RS crates
-        uses: actions-rs/cargo@v1
         working-directory: ./packages/wasm/rs
-        with:
-          command: build
+        run: cargo build --release
 
       - name: Verify & Generate RS Documentation
-        uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --workspace --no-deps
+        working-directory: ./packages/wasm/rs
+        run: cargo doc --workspace --no-deps
 
       - name: Publish Node Packages To NPM
         if: ${{env.TAG_EXISTS}} == 'false'
@@ -119,9 +115,8 @@ jobs:
           NPM_AUTH_TOKEN: ${{secrets.WEB3_API_BUILD_BOT_NPM_PAT}}
 
       - name: Upload Rust Creates To Crates.io
-        uses: actions-rs/cargo@v1
-        with:
-          command: publish
+        working-directory: ./packages/wasm/rs
+        run: cargo publish
 
       - uses: actions/github-script@0.8.0
         if: ${{env.TAG_EXISTS}} == 'false'
