--- a/.github/workflows/rs-ci.yaml
+++ b/.github/workflows/rs-ci.yaml
@@ -6,8 +6,6 @@ jobs:
   RS-CI-Linux:
     name: RS-CI-Linux
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: False
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -37,7 +35,7 @@ jobs:
 
       - name: List Artifacts
         working-directory: ./packages/wasm/rs
-        run: ls target/release
+        run: ls target/debug
 
       - name: Test
         working-directory: ./packages/wasm/rs
