--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   "version": "independent",
   "command": {
     "publish": {
-      "ignoreChanges": [
+      "ignore": [
         "templates-*"
       ]
     }
