--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -20,6 +20,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
+    "@msgpack/msgpack": "2.7.2",
     "@web3api/manifest-schemas": "0.0.1-prealpha.62",
     "@web3api/tracing-js": "0.0.1-prealpha.62",
     "graphql": "15.5.0",
