project refactoring + app command

--- a/packages/js/core/src/__tests__/manifest/web3api.app/duplicate-namespace/web3api.app.yaml
+++ b/packages/js/core/src/__tests__/manifest/web3api.app/duplicate-namespace/web3api.app.yaml
@@ -3,7 +3,7 @@ language: app/typescript
 codegen:
   directory: "./polywrap"
   withExtensions: true
-imports:
+dependencies:
   web3apis:
     - uri: "w3://fs/./../project/build"
       namespace: "project"
