--- a/packages/core-interfaces/logger/web3api.yaml
+++ b/packages/core-interfaces/logger/web3api.yaml
@@ -1,4 +1,5 @@
-format: 0.0.1-prealpha.4
+format: 0.0.1-prealpha.7
+name: Logger
 repository: https://github.com/web3-api/monorepo
 language: interface
 modules:
