--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "./packages/js/**",
       "./packages/manifest-schemas/**",
       "./packages/schema/**",
+      "./packages/templates/**",
       "./packages/test-cases",
       "./packages/test-env/**",
       "./packages/wasm/**"
@@ -52,5 +53,9 @@
     "graphql": "15.5.0",
     "@graphql-eslint/eslint-plugin": "1.0.1",
     "eslint-plugin-json": "3.0.0"
+  },
+  "resolutions": {
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0"
   }
 }
