--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "install:dependencies": "cd dependencies && yarn",
     "preinstall": "yarn install:dependencies",
     "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:cli",
-    "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react",
+    "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react --ignore polywrap-docs-template",
     "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @web3api/client-js --scope @web3api/react",
     "build:cli": "lerna run build --scope @web3api/cli",
