--- a/packages/js/plugins/graph-node/web3api.plugin.yaml
+++ b/packages/js/plugins/graph-node/web3api.plugin.yaml
@@ -1,3 +1,7 @@
-format: 0.0.1-prealpha.1
+format: 0.0.1-prealpha.2
 language: plugin/typescript
-schema: ./schema.graphql
+name: GraphNode
+modules:
+  query:
+    schema: ./src/query/schema.graphql
+    module: ./src/query/index.ts
