test-env wrapper deploy changes init

--- a/packages/js/plugins/ethereum/src/__tests__/integration/web3api.yaml
+++ b/packages/js/plugins/ethereum/src/__tests__/integration/web3api.yaml
@@ -1,4 +1,5 @@
-format: 0.0.1-prealpha.5
+format: 0.0.1-prealpha.8
+name: EthereumIntegration
 build: ./web3api.build.yaml
 language: wasm/assemblyscript
 modules:
