--- a/packages/js/plugins/logger/package.json
+++ b/packages/js/plugins/logger/package.json
@@ -7,8 +7,7 @@
     "url": "https://github.com/web3-api/monorepo.git"
   },
   "files": [
-    "build",
-    "schema.graphql"
+    "build"
   ],
   "version": "0.0.1-prealpha.71",
   "main": "build/index.js",
