--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -15,7 +15,7 @@
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "prebuild": "ts-node ./scripts/extractPluginConfigs.ts",
     "lint": "eslint --color -c ../../../.eslintrc.js src/",
-    "test": "jest --passWithNoTests --runInBand --verbose=true --detectOpenHandles",
+    "test": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
     "test:ci": "jest --passWithNoTests --runInBand --verbose --detectOpenHandles",
     "test:watch": "jest --watch --passWithNoTests --verbose --detectOpenHandles"
   },
