--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -15,8 +15,8 @@
     "build": "rimraf ./build && yarn build:manifest && tsc --project tsconfig.build.json",
     "build:manifest": "node ./scripts/manifest/generateFormatTypes.js",
     "lint": "eslint --color -c ../../../.eslintrc.js src/",
-    "test": "jest --passWithNoTests --runInBand --verbose",
-    "test:ci": "jest --passWithNoTests --runInBand --verbose",
+    "test": "jest --passWithNoTests --runInBand --verbose --onlyChanged",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose --onlyChanged",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
