--- a/packages/js/tracing/package.json
+++ b/packages/js/tracing/package.json
@@ -14,8 +14,8 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color -c ../../../.eslintrc.js src/",
-    "test": "jest --passWithNoTests --runInBand --verbose",
-    "test:ci": "jest --passWithNoTests --runInBand --verbose",
+    "test": "jest --passWithNoTests --runInBand --verbose --onlyChanged",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose --onlyChanged",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
