chore: fix plugin config codegen + linting

--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -1,12 +1,12 @@
-name: Release-Publish
+name: Publish-Releases
 on:
   # When Pull Request is merged
   pull_request_target:
     types: [closed]
 
 jobs:
-  Release-Publish:
-    name: Publish
+  Publish-GitHub-Release:
+    name: GitHub Release
     if: |
       github.event.pull_request.user.login == 'web3-api-build-bot' &&
       github.event.pull_request.merged == true
@@ -75,6 +75,25 @@ jobs:
           draft: false
           prerelease: false
 
+      - uses: actions/github-script@0.8.0
+        if: ${{env.TAG_EXISTS}} == 'false'
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '**[GitHub Release Published](https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_VERSION }}) `${{env.RELEASE_VERSION}}`** 🎉'
+            })
+
+  Publish-NPM-Release:
+    name: NPM Release
+    if: |
+      github.event.pull_request.user.login == 'web3-api-build-bot' &&
+      github.event.pull_request.merged == true
+    runs-on: ubuntu-18.04
+    steps:
       - name: Auth into NPM
         if: ${{env.TAG_EXISTS}} == 'false'
         run: |
@@ -105,5 +124,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '**[Release Published](https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_VERSION }}) `${{env.RELEASE_VERSION}}`** 🎉'
+              body: '**[NPM Release Published](https://www.npmjs.com/search?q=%40web3api) `${{env.RELEASE_VERSION}}`** 🎉'
             })
