--- a/packages/js/asyncify/package.json
+++ b/packages/js/asyncify/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "assemblyscript": "0.19.10",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
