--- a/packages/js/core/package.json
+++ b/packages/js/core/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "@types/semver": "7.3.8",
     "@web3api/os-js": "0.0.1-prealpha.79",
     "jest": "26.6.3",
