--- a/packages/js/plugins/ens/package.json
+++ b/packages/js/plugins/ens/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
