--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "@web3api/client-js": "0.0.1-prealpha.79",
     "@web3api/ens-plugin-js": "0.0.1-prealpha.79",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.79",
