--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "abort-controller": "3.0.0",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
