--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -26,6 +26,7 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "5.1.0",
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
     "@web3api/cli": "0.0.1-prealpha.79",
