--- a/packages/js/tracing/package.json
+++ b/packages/js/tracing/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/prettier": "2.6.0",
     "@types/uuid": "3.4.3",
     "jest": "26.2.2",
     "json-schema-to-typescript": "10.1.3",
