(feat): local fs embedded ens wrappers. Using ens wrapper and not ethers

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "./packages/templates/**",
       "./packages/test-cases",
       "./packages/test-env/**",
-      "./packages/wasm/**"
+      "./packages/wasm/**",
+      "./packages/wrappers/**"
     ]
   },
   "scripts": {
