--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "./packages/js/**",
       "./packages/manifest-schemas/**",
       "./packages/schema/**",
-      "./packages/templates",
+      "./packages/templates/**",
       "./packages/test-cases",
       "./packages/test-env/**",
       "./packages/wasm/**"
