(chore): bundled ens wrapper into test-env-js. No separate pkg

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
       "./packages/templates/**",
       "./packages/test-cases",
       "./packages/test-env/**",
-      "./packages/wasm/**",
-      "./packages/wrappers/**"
+      "./packages/wasm/**"
     ]
   },
   "scripts": {
