--- a/packages/js/core/src/__tests__/manifest/web3api/incorrect-version-format/web3api.yaml
+++ b/packages/js/core/src/__tests__/manifest/web3api/incorrect-version-format/web3api.yaml
@@ -1,13 +1,3 @@
 format: "BAD_FORMAT_VERSION"
-mutation:
-  schema:
-    file: ../schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ../query.ts
-query:
-  schema:
-    file: ../schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ../mutation.ts
+main: ../index.ts
+schema: ../schema.graphql
