--- a/packages/js/core/src/__tests__/manifest/web3api/not-accepted-field/web3api.yaml
+++ b/packages/js/core/src/__tests__/manifest/web3api/not-accepted-field/web3api.yaml
@@ -1,16 +1,7 @@
-format: 0.0.1-prealpha.1
-mutation:
-  schema:
-    file: ../schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ../query.ts
-query:
-  schema:
-    file: ../schema.graphql
-  module:
-    language: wasm/assemblyscript
-    file: ../mutation.ts
+format: 0.0.1-prealpha.9
+language: wasm/assemblyscript
+schema: ../schema.graphql
+file: ../query.ts
 not_accepted_field: not_accepted_field
 
 
